--- a/calculator.html
+++ b/calculator.html
@@ -3,5 +3,6 @@ x = prompt("Enter a value");
 operator = prompt("Enter a operator");
 y = prompt("Enter a value");
 if(operator == "+"){z = eval(x) + eval(y);}
-alert("The total is z");
+alert("The total is");
+alert(z);
 </SCRIPT>
