--- a/calculator.html
+++ b/calculator.html
@@ -3,6 +3,9 @@ x = prompt("Enter a value");
 operator = prompt("Enter a operator");
 y = prompt("Enter a value");
 if(operator == "+"){z = eval(x) + eval(y);}
+if(operator == "-"){z = eval(x) - eval(y);}
+if(operator == "*"){z = eval(x) * eval(y);}
+if(operator == "/"){z = eval(x) / eval(y);}
 alert("The total is");
 alert(z);
 </SCRIPT>
