--- a/CS300-E2.html
+++ b/CS300-E2.html
@@ -49,6 +49,7 @@ var x=document.GetElementById("firstvalue").value;
     <option>-
     <option>*
     <option>/
+    </select>
   <input type=text name=secondvalue>
   <input type=text name=finalvalue>
   <input type="submit" value="ok"
