--- a/CS300-E2.html
+++ b/CS300-E2.html
@@ -43,7 +43,8 @@ var x=document.GetElementById("firstvalue").value;
 
 </script>
 <form name=calculator onSubmit=runoperation();
-  <input type=text name=firstvalue>
+  <textarea name=firstvalue>
+</textarea>
     <select name=operation>
     <option>+
     <option>-
