--- a/CS300-E2.html
+++ b/CS300-E2.html
@@ -44,14 +44,16 @@ var x=document.GetElementById("firstvalue").value;
 </script>
 <form name=calculator onSubmit=runoperation();
   <textarea name=firstvalue>
-</textarea>
+  </textarea>
     <select name=operation>
     <option>+
     <option>-
     <option>*
     <option>/
     </select>
-  <input type=text name=secondvalue>
-  <input type=text name=finalvalue>
+  <textarea name=secondvalue>
+  </textarea>
+  <textarea name=finalvalue>
+  </textarea>
   <input type="submit" value="ok"
 </form>
