--- a/CS300-E2.html
+++ b/CS300-E2.html
@@ -56,5 +56,6 @@ var x=document.GetElementById("firstvalue").value;
   <textarea name=finalvalue>
   </textarea>
 <br>
-  <input type="submit" value="ok"
+  <input type="submit" value="ok">
+<br>
 </form>
