--- a/CS300-E2.html
+++ b/CS300-E2.html
@@ -50,6 +50,9 @@ function runoperation(){
     </select>
   <textarea name=secondvalue>
   </textarea>
+  <pre>
+  "="
+  </pre>
   <textarea name=finalvalue>
   </textarea>
   <input type="submit" value="ok">
