--- a/CS300-E2.html
+++ b/CS300-E2.html
@@ -34,7 +34,7 @@ function runoperation(){
   }
   if(o=="/"){
     z = divide(x,y);
-    document.value = z;
+    document.forms[0].elements[4].value = z;
   }
 }
 
