--- a/CS300-E2.html
+++ b/CS300-E2.html
@@ -7,6 +7,7 @@ function runoperation(){
   if(o=="+"){
     z = eval(x) + eval(y);
     document.form[0].elements[3].value = z;
+    alert(eval(z));
   }
   if(o=="-"){
     z = eval(x) - eval(y);
