--- a/CS300-E2.html
+++ b/CS300-E2.html
@@ -23,7 +23,7 @@ function runoperation(){
   }
 }
 </script>
-<form name=calculator onSubmit=runoperation();
+<form name=calculator onSubmit=runoperation();>
   <br>
   <textarea name=firstvalue>
   </textarea> <br>
