--- a/CS300-E2.html
+++ b/CS300-E2.html
@@ -25,18 +25,18 @@ function runoperation(){
 </script>
 <form name=calculator onSubmit=runoperation();>
   <br>
-  <textarea id=firstvalue>
+  <textarea id="firstvalue">
   </textarea> <br>
-    <select id=operation>
+    <select id="operation">
     <option>+
     <option>-
     <option>*
     <option>/
     </select> <br>
-  <textarea id=secondvalue>
+  <textarea id="secondvalue">
   </textarea>
   <pre>=</pre> <br>
-  <textarea id=finalvalue>
+  <textarea id="finalvalue">
   </textarea> <br>
   <input type="submit" value="ok">
 
